# sync_bookmark_vivaldi_safari

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
bsync/: __init__.py  __main__.py  cli.py  filters.py  merge.py  models.py  safari.py  snapshot.py  vivaldi.py  watcher.py
tests/: conftest.py  test_filters.py  test_merge.py  test_safari.py  test_vivaldi.py
